--- a/Languages/English/Keyed/settings.xml
+++ b/Languages/English/Keyed/settings.xml
@@ -5,15 +5,23 @@
   <SetUpCampDesc>Set up a camp, enabling you to forage, mine and hunt as well as reorganize your caravan.</SetUpCampDesc>
   <SetUpCampFormedCamp>The caravan successfully set up a camp.</SetUpCampFormedCamp>
   <SetUpCampSettingsCategoryLabel>Set Up Camp</SetUpCampSettingsCategoryLabel>
-  <SetUpCampSettingMapSize>Camp map size range</SetUpCampSettingMapSize>
+  <SetUpCampSettingMapSize>Camp map size range (Default: 75-125)</SetUpCampSettingMapSize>
+  <SetUpCampSettingsMapTimerDays>Camp leaving timer (Default: 5)</SetUpCampSettingsMapTimerDays>
+  <SetUpCampSettingsMapTimerDaysTooltip>Days until caravan is forced to leave camp</SetUpCampSettingsMapTimerDaysTooltip>
+  <SetUpCampSettingsTimeout>Abandoned camp vanish timer (Default: 60)</SetUpCampSettingsTimeout>
+  <SetUpCampSettingsTimeoutTooltip>Days until abandoned camps vanish (15-120)</SetUpCampSettingsTimeoutTooltip>
   <SetUpCampSettingMinCampSize>Minimum size for camps</SetUpCampSettingMinCampSize>
   <SetUpCampSettingMaxCampSize>Maximum size for camps</SetUpCampSettingMaxCampSize>
   <SetUpCampSettingsPermanentCamps>Enable permanent camps (disabling this will permanently delete all empty camps currently on the map)</SetUpCampSettingsPermanentCamps>
+  <SetUpCampSettingsHomeEvents>Enable "normal map" events on camps</SetUpCampSettingsHomeEvents>
+  <SetUpCampSettingsCaravanEvents>Enable "caravan" events on camps</SetUpCampSettingsCaravanEvents>
   <SetUpCampDestroyCamp>Abandon camp</SetUpCampDestroyCamp>
   <SetUpCampDestroyCampDesc>Abandons this camp permanently.</SetUpCampDestroyCampDesc>
   <SetUpCampAbandonDialogue>Are you sure you wish to permanently and irreversibly destroy this camp?</SetUpCampAbandonDialogue>
   <SetUpCampAbandoned>Camp abandoned.</SetUpCampAbandoned>
   <SetUpCampStillInUse>There are still colonists in the camp. You must form a caravan before abandoning the camp.</SetUpCampStillInUse>
+  <SetUpCampOccupied>You need to wait before setting up a camp at the same spot.</SetUpCampOccupied>
+
   
 
 </LanguageData>
