--- a/Languages/English/Keyed/settings.xml
+++ b/Languages/English/Keyed/settings.xml
@@ -23,6 +23,7 @@
   <SetUpCampStillInUse>There are still colonists in the camp. You must form a caravan before abandoning the camp.</SetUpCampStillInUse>
   <SetUpCampOccupied>You need to wait before setting up a camp at the same spot.</SetUpCampOccupied>
 
+  <SetUpCamp_GeneratingCamp>Generating camp site</SetUpCamp_GeneratingCamp>
   
 
 </LanguageData>
