--- a/Languages/ChineseTraditional/Keyed/settings.xml
+++ b/Languages/ChineseTraditional/Keyed/settings.xml
@@ -1,28 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <SetUpCamp>Set up camp</SetUpCamp>
-  <SetUpCampDesc>建立一個營地，讓您可以覓食，開采和打獵以及重新整理您的商隊.</SetUpCampDesc>
-  <SetUpCampFormedCamp>商隊成功建立了一個營地.</SetUpCampFormedCamp>
-  <SetUpCampSettingsCategoryLabel>設置營地</SetUpCampSettingsCategoryLabel>
-  <SetUpCampSettingMapSize>營地地圖尺寸範圍 (默認: 75-125)</SetUpCampSettingMapSize>
-  <SetUpCampSettingsMapTimerDays>離開營地計時器 (默認: 5)</SetUpCampSettingsMapTimerDays>
-  <SetUpCampSettingsMapTimerDaysTooltip>直到商隊被迫離開營地的日子</SetUpCampSettingsMapTimerDaysTooltip>
-  <SetUpCampSettingsTimeout>廢棄營地消失計時器 (默認: 60)</SetUpCampSettingsTimeout>
-  <SetUpCampSettingsTimeoutTooltip>直到廢棄營地消失的日子 (15-120)</SetUpCampSettingsTimeoutTooltip>
-  <SetUpCampSettingMinCampSize>營地的最小尺寸</SetUpCampSettingMinCampSize>
-  <SetUpCampSettingMaxCampSize>營地的最大尺寸</SetUpCampSettingMaxCampSize>
+  <SetUpCamp>露營地</SetUpCamp>
+  <SetUpCampDesc>設置一個臨時營地，讓你可以搜尋食物資源，治療傷患並重組遠行隊。</SetUpCampDesc>
+  <SetUpCampFormedCamp>遠行隊成功建立了一個營地。</SetUpCampFormedCamp>
+  <SetUpCampSettingsCategoryLabel>露營地</SetUpCampSettingsCategoryLabel>
+  <SetUpCampSettingMapSize>營地地圖尺寸（默認值：75-125）</SetUpCampSettingMapSize>
+  <SetUpCampSettingsMapTimerDays>營地存在時間（默認值：5）</SetUpCampSettingsMapTimerDays>
+  <SetUpCampSettingsMapTimerDaysTooltip>能夠在一個營地停留的最長天數。</SetUpCampSettingsMapTimerDaysTooltip>
+  <SetUpCampSettingsTimeout>廢棄營地消失時間（默認值：60）</SetUpCampSettingsTimeout>
+  <SetUpCampSettingsTimeoutTooltip>被遺棄的營地消失需要的天數（15-120）</SetUpCampSettingsTimeoutTooltip>
+  <SetUpCampSettingMinCampSize>營地地圖最小尺寸</SetUpCampSettingMinCampSize>
+  <SetUpCampSettingMaxCampSize>營地地圖最大尺寸</SetUpCampSettingMaxCampSize>
   <SetUpCampSettingsCustomMapGenDef>啟用資源</SetUpCampSettingsCustomMapGenDef>
-  <SetUpCampSettingsPermanentCamps>啟用永久性營地（禁用此功能將永久刪除當前在地圖上的所有空營地）</SetUpCampSettingsPermanentCamps>
-  <SetUpCampSettingsHomeEvents>在營地上啟用“普通地圖”事件</SetUpCampSettingsHomeEvents>
-  <SetUpCampSettingsCaravanEvents>在營地啟用“商隊”活動</SetUpCampSettingsCaravanEvents>
+  <SetUpCampSettingsPermanentCamps>啟用永久營地（禁用此功能將永久刪除當前地圖上的所有空營地）</SetUpCampSettingsPermanentCamps>
+  <SetUpCampSettingsHomeEvents>在營地地圖啟用殖民地地圖的所有事件</SetUpCampSettingsHomeEvents>
+  <SetUpCampSettingsCaravanEvents>在營地地圖啟用遠行隊的所有事件</SetUpCampSettingsCaravanEvents>
   <SetUpCampDestroyCamp>放棄營地</SetUpCampDestroyCamp>
-  <SetUpCampDestroyCampDesc>永久放棄這個營地.</SetUpCampDestroyCampDesc>
-  <SetUpCampAbandonDialogue>你確定你想永久地和不可逆轉地摧毀這個營地嗎？</SetUpCampAbandonDialogue>
-  <SetUpCampAbandoned>營地遺棄</SetUpCampAbandoned>
-  <SetUpCampStillInUse>營地裡還有殖民者.在放棄營地之前，你必須組建一個商隊.</SetUpCampStillInUse>
-  <SetUpCampOccupied>在同一個地方建立營地之前你需要等待.</SetUpCampOccupied>
+  <SetUpCampDestroyCampDesc>永久放棄該營地。</SetUpCampDestroyCampDesc>
+  <SetUpCampAbandonDialogue>你確定永久並不可逆轉地放棄這個營地嗎？</SetUpCampAbandonDialogue>
+  <SetUpCampAbandoned>放棄營地。</SetUpCampAbandoned>
+  <SetUpCampStillInUse>營地內還有殖民者。你必須在放棄營地前建立遠行隊。</SetUpCampStillInUse>
+  <SetUpCampOccupied>當前位置已經有營地。</SetUpCampOccupied>
 
+  <SetUpCamp_GeneratingCamp>生成營地</SetUpCamp_GeneratingCamp>
 
 
 </LanguageData>
